--- a/package.json
+++ b/package.json
@@ -23,16 +23,20 @@
     "node": ">=8"
   },
   "dependencies": {
+    "@types/debug": "^0.0.31",
     "@types/micromatch": "^3.1.0",
     "@types/minimatch": "^3.0.3",
     "@types/yargs": "^12.0.1",
+    "debug": "^4.1.0",
     "micromatch": "^3.1.10",
     "minimatch": "^3.0.4",
     "yargs": "^12.0.2"
   },
   "devDependencies": {
     "@tradie/node-scripts": "^1.2.1",
+    "@types/fs-extra": "^5.0.4",
     "@types/jest": "^23.3.2",
+    "fs-extra": "^7.0.1",
     "husky": "^1.1.0",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3"
