--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "run-if-diff",
-  "version": "1.1.0",
-  "description": "Runs a command if files are different.",
+  "version": "1.1.1",
+  "description": "Run a command if files are different.",
   "keywords": [
     "git",
     "diff",
