--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "run-if-diff",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Run a command if files are different.",
   "keywords": [
     "git",
@@ -40,11 +40,12 @@
     "prettier": "^1.14.3"
   },
   "scripts": {
+    "clean": "node-scripts clean",
     "build": "node-scripts build",
     "watch": "node-scripts build --watch",
     "test": "node-scripts test",
     "example": "node-scripts example",
-    "prepublishOnly": "npm run build && npm run test"
+    "prepublishOnly": "npm run clean && npm run build && npm run test"
   },
   "husky": {
     "hooks": {
