--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "run-if-diff",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Run a command if files have changed.",
   "keywords": [
     "git",
@@ -52,7 +52,6 @@
     "jest": "^26.4.2",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2",
-    "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
   "babel": {
@@ -68,7 +67,7 @@
   },
   "husky": {
     "hooks": {
-      "precommit": [
+      "pre-commit": [
         "pretty-quick --staged",
         "git add"
       ]
