--- a/.github/workspaces/ci.yml
+++ b/.github/workspaces/ci.yml
@@ -1,10 +1,12 @@
 name: CI
 
-on: [pull_request]
+on: 
+  push:
+    branches: master
+  pull_request:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -12,30 +14,30 @@ jobs:
         node-version: [8.x, 10.x, 12.x]
 
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+      - uses: actions/checkout@v2
 
-    - id: yarn-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - uses: actions/cache@v2
-      with:
-        path: |
-          **/node_modules
-          ${{ steps.yarn-cache-dir-path.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn-
+      - id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
 
-    - run: yarn install --frozen-lockfile
-    
-    - run: yarn run lint
-    - run: yarn run type
-    - run: yarn run build
-    - run: yarn run test
-      env:
-        CI: true
+      - uses: actions/cache@v2
+        with:
+          path: |
+            **/node_modules
+            ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - run: yarn install --frozen-lockfile
+
+      - run: yarn run lint
+      - run: yarn run type
+      - run: yarn run build
+      - run: yarn run test
+        env:
+          CI: true
