--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+      - run: |
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
       - run: yarn install --frozen-lockfile
       - run: yarn run lint
       - run: yarn run type
