--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "run-if-diff",
-  "version": "2.2.0",
+  "version": "3.0.0",
   "description": "Run a command if files have changed.",
   "keywords": [
     "git",
@@ -12,7 +12,9 @@
     "file",
     "run-if-diff",
     "exit-if-diff",
-    "run-if-changed"
+    "run-if-changed",
+    "monorepo",
+    "passthru"
   ],
   "repository": "jameslnewell/run-if-diff",
   "main": "lib/api/index.js",
@@ -25,15 +27,13 @@
     "lib"
   ],
   "engines": {
-    "node": ">=8"
+    "node": ">=10"
   },
   "dependencies": {
     "@types/debug": "^4.1.5",
-    "@types/micromatch": "^4.0.1",
     "@types/node": "^14.11.1",
     "@types/yargs": "^15.0.5",
     "debug": "^4.2.0",
-    "micromatch": "^4.0.2",
     "yargs": "^16.0.3"
   },
   "devDependencies": {
@@ -78,7 +78,7 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "type": "tsc -p tsconfig.json",
-    "build": "tsc -p tsconfig.compile.json",
+    "build": "tsc -p tsconfig.build.json",
     "test": "jest",
     "prepublishOnly": "npm run clean && npm run format && npm run lint && npm run build && npm run test"
   },
