--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,3 +1,4 @@
+// used for building
 {
   "extends": "./node_modules/@jameslnewell/typescript-config/tsconfig.json",
   "compilerOptions": {
@@ -5,5 +6,5 @@
     "outDir": "lib"
   },
   "include": ["src"],
-  "exclude": ["test-utils.ts", "**/*.tests.ts"]
+  "exclude": ["**/test-utils.ts", "**/*.tests.ts"]
 }
