--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "yargs": "^16.0.3"
   },
   "devDependencies": {
+    "@actions/core": "^1.2.6",
     "@babel/core": "^7.11.6",
     "@jameslnewell/babel-preset": "^2.1.0",
     "@jameslnewell/editor-config": "^1.0.1",
@@ -46,6 +47,7 @@
     "@jameslnewell/typescript-config": "^3.0.0",
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^26.0.14",
+    "@vercel/ncc": "^0.25.1",
     "eslint": "^7.9.0",
     "fs-extra": "^9.0.1",
     "husky": "^4.3.0",
@@ -78,7 +80,9 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "type": "tsc -p tsconfig.json",
-    "build": "tsc -p tsconfig.build.json",
+    "build:package": "tsc -p tsconfig.build.json",
+    "build:action": "ncc build src/action/index.ts -o lib/action",
+    "build": "yarn run build:package && yarn build:action",
     "test": "jest",
     "prepublishOnly": "npm run clean && npm run format && npm run lint && npm run build && npm run test"
   },
