--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,7 +2,7 @@
   "extends": "./node_modules/@jameslnewell/typescript-config/tsconfig.json",
   "compilerOptions": {
     "esModuleInterop": true,
-    "target": "ESNEXT",
+    "target": "ES2015",
     "module": "ESNEXT"
   }
 }
