--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,6 +9,7 @@ jobs:
   action:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - id: run-if-diff
         uses: jameslnewell/run-if-diff@master
       - name: Get the ref
