--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,7 +13,7 @@ jobs:
       - id: run-if-diff
         uses: jameslnewell/run-if-diff@master
         with:
-          ref: HEAD~1
+          since: HEAD~1
       - name: Get the ref
         run: echo "ref=${{ steps.run-if-diff.outputs.ref }}"
       - name: Get the files
