--- a/action.yml
+++ b/action.yml
@@ -2,11 +2,11 @@ name: run-if-diff
 description: Run a command if files are different
 inputs:
   cwd:
-    description: The git directory
+    description: The directory containing the .git directory
     required: false
     default: .
   since:
-    description: A git ref to compare the current working directory to
+    description: The git ref to compare the current working directory to
     required: false
   file-path:
     description: The file paths (or glob) to filter the files by
@@ -15,8 +15,12 @@ inputs:
     description: The file statuses to filter the files by
     required: false
 outputs:
-  files:
-    description: The matching files which have changed
+  ref:
+    description: The git ref
+  count:
+    description: The number of files that have changed and match the filter
+  paths:
+    description: The paths of files that have changed and match the filter
 runs:
   using: "node12"
   main: "lib/action/index.js"
