--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,7 +15,8 @@ jobs:
         uses: jameslnewell/run-if-diff@master
         with:
           since: first-tag
-          file-paths: "**/*.ts"
+          file-paths: "**/*.md"
+          file-status: "d"
       - name: Get the ref
         run: 'echo "ref: ${{ steps.run-if-diff.outputs.ref }}"'
       - name: Get the file count
