--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,10 +9,10 @@ jobs:
   action:
     runs-on: ubuntu-latest
     steps:
-      
       - uses: actions/checkout@v2
 
-      - uses: jameslnewell/run-if-diff@master
+      - id: run-if-diff
+        uses: jameslnewell/run-if-diff@master
         with:
           file-path: |
             apps/**/*.tsx
