compare to first-tag

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,6 +13,8 @@ jobs:
 
       - id: run-if-diff
         uses: jameslnewell/run-if-diff@master
+        with:
+          ref: first-tag
 
       - name: Get the ref
         run: 'echo "ref: ${{ steps.run-if-diff.outputs.ref }}"'
