--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: git fetch --depth 1 origin refs/tags/first-tag:refs/tags/first-tag
 
       - id: run-if-diff
         uses: jameslnewell/run-if-diff@master
